# substreams-split-binaires

./: Cargo.toml  Makefile  schema.sql  substreams.yaml
common/: Cargo.toml  build.rs
common/abi/: contract.abi.json
common/src/abi/: contract.rs
common/src/pb/: contract.v1.rs
main/: Cargo.toml
main/src/: lib.rs
proto/: contract.proto
store/: Cargo.toml
store/src/: lib.rs
