[package]
name = "common"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
ethabi = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
num-bigint = { workspace = true }
substreams = { workspace = true }
substreams-ethereum = { workspace = true }

[build-dependencies]
anyhow = "1"
substreams-ethereum = { workspace = true }
regex = "1.8"
